--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.shipping-system</groupId>
-	<artifactId>shippingSystem</artifactId>
+	<groupId>com.maitred</groupId>
+	<artifactId>maitreD</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for a Shipping System</description>
+	<name>maitreD</name>
+	<description>Demo project for a Maitre D restaurant</description>
 	<properties>
 		<java.version>15</java.version>
 	</properties>
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
 		</dependency>
 	</dependencies>
 
